Adding 3 more pages and simple style for the nav bar

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <div class="container">
     <header class="navigator">
       <nav>
-        <h1>Welcome home!</h1>
+        <h1>About me!</h1>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
