Adding more stuff into those four pages and enrich the pages with images :D

--- a/about.html
+++ b/about.html
@@ -3,19 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
+  <link rel="icon" href="assets/icons/t.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <header class="navigator">
       <nav>
-        <h1>About me!</h1>
+        <div class="line-center">
+          <img src="assets/icons/about.png" alt="home image" width="42px" height="42px">
+          <h1 class="title">About</h1>
+        </div>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
       </nav>
     </header>
+    <article>
+      <header>
+        <img src="assets/img/me.jpg" alt="Me" width="189" height="252">
+        <h2>Wen Hsiang, Cheng</h2>
+        <p>Hi I'm Wen Hsiang, Cheng.</p>
+      </header>
+      
+    </article>
   </div>
 </body>
 </html>
