--- a/index.html
+++ b/index.html
@@ -3,19 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
+  <link rel="icon" href="assets/icons/t.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <header class="navigator">
       <nav>
-        <h1>Welcome home!</h1>
+        <div class="line-center">
+          <img src="assets/icons/home.png" alt="home image" width="42px" height="42px">
+          <h1 class="title">Home</h1>
+        </div>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
       </nav>
     </header>
+    <article>
+      <header>
+        <h2>Welcome to my personal website!</h2>
+        <p>I build this website from scratch! and I will continue adding new stuff into it every single day!</p>
+        <p>Stay tune for the final result :D</p>
+        <p>Last update date: 8/3/2023</p>
+      </header>
+    </article>
   </div>
 </body>
 </html>
