--- a/projects.html
+++ b/projects.html
@@ -3,19 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
+  <link rel="icon" href="assets/icons/t.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <header class="navigator">
       <nav>
-        <h1>My projects!</h1>
+        <div class="line-center">
+          <img src="assets/icons/projects.png" alt="home image" width="42px" height="42px">
+          <h1 class="title">Projects</h1>
+        </div>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
       </nav>
     </header>
+    <article>
+      <header>
+        <h2>This page will showcase the projects that I developed!</h2>
+        <div class="project-block">
+          <h3>Project1</h3>
+        </div>
+
+        <div class="project-block">
+          <h3>Project2</h3>
+          
+        </div>
+
+        <div class="project-block">
+          <h3>Project3</h3>
+          
+        </div>
+      </header>
+    </article>
   </div>
 </body>
 </html>
