--- a/resume.html
+++ b/resume.html
@@ -3,19 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
+  <link rel="icon" href="assets/icons/t.png" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <header class="navigator">
       <nav>
-        <h1>My resume!</h1>
+        <div class="line-center">
+          <img src="assets/icons/resume.png" alt="home image" width="42px" height="42px">
+          <h1 class="title">Resume</h1>
+        </div>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="resume.html">Resume</a>
         <a href="projects.html">Projects</a>
       </nav>
     </header>
+    <article>
+      <header>
+        <div class="block">
+          <h2 class="h2-underscore">Education</h2>
+          <div class="sub-block">
+            <div class="line-apart">
+              <p><strong>NATIONAL TAIWAN UNIVERSITY of SCIENCE and TECHNOLOGY</strong></p>
+              <p>Taipei, Taiwan</p>
+            </div>
+            <div class="line-apart">
+              <p>BSc in Computer Science & Information Engineering</p>
+              <p>Sept. 2019 – June 2023</p>
+            </div>
+            <ul class="item-list">
+              <li>Cumulative GPA: 4.24/4.3</li>
+              <li>Ranking: 1/107 (The Valedictorian)</li>
+              <li>Graduated with honors: Phi Tau Phi Scholastic Honor, Academic Excellence Award * 7</li>
+              <li>Activities: Chief Teaching Officer at Data Analysis Club, Graduate Representative</li>
+            </ul>
+          </div>
+          <div class="sub-block">
+            <div class="line-apart">
+              <p><strong>NATIONAL UNIVERSITY of SINGAPORE</strong></p>
+              <p>Singapore</p>
+            </div>
+            <div class="line-apart">
+              <p>Non-Graduating Exchange Program in School of Computing</p>
+              <p>Jan. 2023 – May 2023</p>
+            </div>
+            <ul class="item-list">
+              <li>GPA: 4.67/5</li>
+              <li>Coursework: Data Structure and Algorithm, Design and Analysis of Algorithm, Information Retrieval</li>
+              <li>Activities: NUS Game Development Group, NUS Dodgeball Club</li>
+            </ul>
+          </div>
+        </div>
+
+        <div>
+          <h2 class="h2-underscore">Professional Experience</h2>
+
+        </div>
+
+      </header>
+    </article>
   </div>
 </body>
 </html>
