--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
         <h2>Welcome to my personal website!</h2>
         <p>I build this website from scratch! and I will continue adding new stuff into it every single day!</p>
         <p>Stay tune for the final result :D</p>
-        <p>Last update date: 8/3/2023</p>
+        <p>Last update date: 8/4/2023</p>
       </header>
     </article>
+    <footer>
+      <p>Copyright&copy;Wen Hsiang Cheng</p>
+    </footer>
   </div>
 </body>
 </html>
