--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,9 @@
         </div>
       </header>
     </article>
+    <footer>
+      <p>Copyright&copy;Wen Hsiang Cheng</p>
+    </footer>
   </div>
 </body>
 </html>
