--- a/resume.html
+++ b/resume.html
@@ -57,9 +57,18 @@
           </div>
         </div>
 
-        <div>
+        <div class="block">
           <h2 class="h2-underscore">Professional Experience</h2>
 
+        </div>
+
+        <div class="block">
+          <h2 class="h2-underscore">Language</h2> 
+          <ul class="item-list">
+            <li>Mandarin: Native</li>
+            <li>English: Professional</li>
+            <li>Spanish: Basic</li>
+          </ul>
         </div>
 
       </header>
