--- a/about.html
+++ b/about.html
@@ -24,8 +24,21 @@
       <header>
         <img src="assets/img/me.jpg" alt="Me" width="189" height="252">
         <h2>Wen Hsiang, Cheng</h2>
-        <p>Hi I'm Wen Hsiang, Cheng.</p>
       </header>
+      
+      <br>
+      <p>
+        Hello, my name is Wen-Hsiang Cheng, but you can call me Tom. I am a highly motivated and accomplished individual with a Bachelor of Science in Computer Science & Information Engineering from NTUST, the best industrial university in Taiwan. I’m the person that when I set a goal, I am committed to working hard and persevering until I achieve it. My determination and resilience are reflected in my academic performance during my Bachelor's degree, where I consistently ranked among the top performers and received the academic excellence award every semester.
+      </p>
+      <br>
+      <p>
+        Throughout my journey, I have gained valuable experiences in various roles across different projects. I have worked as a UI/UX designer, a frontend developer, a backend developer, and even as a full-stack game developer. These diverse experiences have equipped me with a well-rounded skill set and a deep understanding of the software development process.
+      </p>
+      <br>
+      <p>
+        Moreover, I have a strong passion for continuous learning. I am always eager to explore new technologies and embrace fresh challenges. This drive for learning enables me to adapt to this rapidly-changing dynamic environment.
+      </p>
+      <br>
       
     </article>
   </div>
