--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,11 @@
     </header>
     <article>
       <header>
+
+        <!-- This is just a note (will be removed) -->
+        <p style="font-size: 36px; color: red; font-weight: bold; margin-bottom: 30px;">Will be modified to be more interesting</p>
+        <!-- End of to be removed zone -->
+
         <div class="block">
           <h2 class="h2-underscore">Education</h2>
           <div class="sub-block">
@@ -59,7 +64,96 @@
 
         <div class="block">
           <h2 class="h2-underscore">Professional Experience</h2>
+          <div class="sub-block">
+            <div class="line-apart">
+              <p><strong>ACCUHIP</strong></p>
+              <p>Taipei, Taiwan</p>
+            </div>
+            <div class="line-apart">
+              <p>UI/UX Designer and Unity Frontend Developer</p>
+              <p>Sept. 2022 – Present</p>
+            </div>
+            <ul class="item-list">
+              <li>Developing a medical device for guiding total hip arthroplasty operation and instant feedback in whether
+                cup orientation is within the safe zone during total hip arthroplasty.</li>
+              <li>Sponsored by Taiwan Germination Program under National Science and Technology Council (NSTC).</li>
+            </ul>
+          </div>
+          <div class="sub-block">
+            <div class="line-apart">
+              <p><strong>INTERNATIONAL GAMES SYSTEM CO.</strong></p>
+              <p>Taipei, Taiwan</p>
+            </div>
+            <div class="line-apart">
+              <p>Backend Developer</p>
+              <p>May. 2022 – Mar. 2023</p>
+            </div>
+            <ul class="item-list">
+              <li>Developed an online games analysis system that served as the internal analysis platform within IGS CO.</li>
+              <li>Initiated the optimization in database design enhancing the system query time by 75 percent.</li>
+            </ul>
+          </div>
+        </div>
 
+        <div class="block">
+          <h2 class="h2-underscore">PROJECTS</h2>
+          <div class="sub-block">
+            <div class="line-apart">
+              <p><strong>LEGAL CASE RETRIEVAL MINI PROJECT (NUS)</strong></p>
+              <p>Singapore</p>
+            </div>
+            <div class="line-apart">
+              <p>System Developer under Advisor: Prof. ZHAO Jin</p>
+              <p>Jan. 2023 – May. 2023</p>
+            </div>
+            <ul class="item-list">
+              <li>Built a search engine with Boolean Retrieval Model and Vector Space Model based on real-world legal corpus
+                provided by Intelllex.</li>
+              <li>Applied query refinement, query expansion, zones and fields, compressions and pseudo relevant feedback.</li>
+            </ul>
+          </div>
+          <div class="sub-block">
+            <div class="line-apart">
+              <p><strong>WAGYU RUSH (Taiwan Tech)</strong></p>
+              <p>Taipei, Taiwan</p>
+            </div>
+            <div class="line-apart">
+              <p>Fullstack Game Developer under Advisor: Prof. Wen-Kai, Tai</p>
+              <p>Sept. 2021 – Jan. 2022</p>
+            </div>
+            <ul class="item-list">
+              <li>Developed an innovative brain-teasing puzzle game using Unity for PC platform and Swift for iOS platform.</li>
+              <li>Won the Best Innovation Award and the Best Game Design Award from 2022 Innovation Game Design
+                Competition.</li>
+            </ul>
+          </div>
+          <div class="sub-block">
+            <div class="line-apart">
+              <p><strong>GRAPHICS TEXTUAL EDITOR (Taiwan Tech)</strong></p>
+              <p>Taipei, Taiwan</p>
+            </div>
+            <div class="line-apart">
+              <p>Application Developer under Advisor: Prof. Chih-Yuan, Yao</p>
+              <p>Feb. 2021 – June 2021</p>
+            </div>
+            <ul class="item-list">
+              <li>Built an ease-of-use winform application for texture editing on 3D models using OpenGL/C++.</li>
+              <li>Achieved convenient texture drag and drop, rotating, scaling, shrinking and dilating.</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="block">
+          <h2 class="h2-underscore">ADDITIONAL INFORMATION</h2>
+          <p>Programming languages: C#(Unity), C++/C, Python, Javascript</p>
+          <p>Web development: HTML/CSS, Nodejs, Nestjs, Vuejs, NginX</p>
+          <p>Others: Git, Docker, Linux, GCP</p>
+          <p>Standardized Test:</p>
+          <ul class="item-list">
+            <li>TOEFL: 108 (R30, L28, S24, W26)</li>
+            <li>TOEIC: 900 (R440, L460)</li>
+            <li>GRE: 325 AW3.5 (Q170, V155)</li>
+          </ul>
         </div>
 
         <div class="block">
