Add a smiley face

--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
         <p>Stay tune for the final result :D</p>
         <p>Last update date: 8/5/2023</p>
       </header>
+      <div class="center-box">
+        <img src="assets/img/smile.png" alt="A smiley face" id="face">
+        <p id="counter">Happiness: 60</p>
+      </div>
     </article>
     <footer>
       <p>Copyright&copy;Wen Hsiang Cheng</p>
     </footer>
   </div>
 </body>
+<script src="js/app.js"></script>
 </html>
